fixed navbar for map page

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -20,5 +20,10 @@
     var marker = L.marker([<%= lat %>, <%= lng %>]).addTo(map);
     marker.bindPopup('<b>Hello!</b><br>This is a custom marker.').openPopup();
 </script>
+<nav>
+    <a href="/">Home</a> |
+    <a href="/about">About</a> |
+    <a href="/contact">Contact</a> |
+</nav>
 </body>
 </html>
