--- a/views/map.ejs
+++ b/views/map.ejs
@@ -24,6 +24,7 @@
     <a href="/">Home</a> |
     <a href="/about">About</a> |
     <a href="/contact">Contact</a> |
+    <a href="/files">Files</a> |
     <a href="/upload">Upload</a>
 </nav>
 </body>
