--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -15,6 +15,7 @@
     <a href="/">Home</a> |
     <a href="/about">About</a> |
     <a href="/contact">Contact</a> |
+    <a href="/files">Files</a> |
     <a href="/map">Map</a>
 </nav>
 </body>
