--- a/views/multiple-gpx.ejs
+++ b/views/multiple-gpx.ejs
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GPX Route</title>
+    <title>Multiple GPX Routes</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-gpx/1.4.0/gpx.min.js"></script>
 </head>
 <body>
-<h1>GPX Route</h1>
+<h1>Multiple GPX Routes</h1>
 <div id="map" style="width: 100%; height: 500px;"></div>
 <script>
     var map = L.map('map').setView([0, 0], 2);
@@ -18,17 +18,13 @@
         attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
 
-    console.log('here');
-
-    // Load and display the GPX file
-    new L.GPX('<%= gpxFilePath %>', {
+    <% gpxFiles.forEach(file => { %>
+    new L.GPX('/uploads/extracted/<%= file %>', {
         async: true
     }).on('loaded', function(e) {
-        console.log('Loaded GPX file:');
         map.fitBounds(e.target.getBounds());
-    }).on('error', function(e) {
-        console.error('Error loading GPX file:', e);
     }).addTo(map);
+    <% }); %>
 </script>
 <br>
 <a href="/">Upload Another File</a>
